--- a/src/app/pages/login-component/secret-code-component/secret-code-component.component.html
+++ b/src/app/pages/login-component/secret-code-component/secret-code-component.component.html
@@ -8,6 +8,6 @@
     </form>
 </div>
 <div mat-dialog-actions>
-    <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
+    <button mat-raised-button color="warn" (click)="onClose()" mat-dialog-close>Cancel</button>
     <button mat-raised-button color="primary" (click)="onConfirmClick()" cdkFocusInitial>Ok</button>
 </div>
